# python_machine_learning

./: README.md  pyproject.toml
notebooks/: my_notebook.ipynb
src/machine_learning/: __init__.py  __main__.py  settings.py
